# EyeSew

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  compile_commands.json  imgui.ini  run.bat
EyeSew/: CMakeLists.txt  EyeSew.cpp  EyeSew.h
EyeSew/include/: Color3.hpp  Editor.hpp  Helpers.hpp  Instance.hpp  Properties.hpp  Script.hpp  Userdata.hpp  Usertypes.hpp  Vec3.hpp
EyeSew/src/: Color3.cpp  Editor.cpp  Instance.cpp  Main.cpp  Script.cpp  Userdata.cpp  Usertypes.cpp  Vec3.cpp
